* ltconfig.in: Reverted June 6's patch for new GNU ld output, it is no longer needed, as ld reverted to the original format. * NEWS: Likewise.
* ltconfig.in: When testing self-dlopening, test whether dlclose
crashes.  On FreeBSD 3.1, it does.  :-(
* libltdl/configure.in: Likewise.
* NEWS: Note work-around.
Reported by Pavel Roskin <pavel_roskin@geocities.com>

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -352,7 +352,7 @@ if test x"$ac_cv_sys_symbol_underscore" = xyes; then
 fnord() { int i=42;}
 main() { void *self, *ptr1, *ptr2; self=dlopen(0,LTDL_GLOBAL|LTDL_LAZY_OR_NOW);
     if(self) { ptr1=dlsym(self,"fnord"); ptr2=dlsym(self,"_fnord");
-	       if(ptr1 && !ptr2) exit(0); } exit(1); } 
+	       if(ptr1 && !ptr2) { dlclose(self); exit(0); } } exit(1); } 
 ],	libltdl_cv_need_uscore=no, libltdl_cv_need_uscore=yes,
 	libltdl_cv_need_uscore=cross
 )])
