* ltmain.in (outputname): When generating the executable wrapper script, $outputname already has the $exeext suffix, so we needn't add it again.

--- a/ltmain.in
+++ b/ltmain.in
@@ -2816,7 +2816,7 @@ else
 
 	if test "$fast_install" = yes; then
 	  echo >> $output "\
-  program=lt-'$outputname$exeext'
+  program=lt-'$outputname'
   progdir=\"\$thisdir/$objdir\"
   
   if test ! -f \"\$progdir/\$program\" || \\
